# graph-db

./: .travis.yml  Ideas on Granular Actions.md  README.md  graph-db.cabal  tpm-graph-db.cabal
api-tests/: Main.hs
api-tests/APITests/: Catalogue.hs  Prelude.hs
api-tests/APITests/Util/: FileSystem.hs
benchmarks/: Benchmarks.hs  Competition.hs  Nonpersistent.hs
benchmarks/Benchmarks/: AcidState.hs  GraphDB.hs  Model.hs  Postgres.hs  Prelude.hs  Random.hs
benchmarks/Benchmarks/AcidState/: AcidStatePlus.hs
benchmarks/Benchmarks/Postgres/: PostgreSQLSimplePlus.hs
benchmarks/Benchmarks/Util/: FileSystem.hs
demo/: Main.hs
executables/: CompetitionBench.hs  Demo.hs  NonpersistentBench.hs
executables/APITests/: Prelude.hs
executables/Benchmarks/: Model.hs  Prelude.hs  Random.hs
executables/InternalTests/: MacrosTests.hs  THTests.hs
htf-test-suite/: Main.hs
htf-test-suite/HTFTestSuite/: Catalogue.hs  StorageTests.hs
internal-tests/: Main.hs
internal-tests/InternalTests/: GraphTests.hs  StorageTests.hs  THTests.hs
macros-benchmark/: Main.hs
src/: Demo.hs  GenerateBoilerplateDemo.hs  GraphDB.hs  HTFTestSuite.hs  MainTestSuite.hs  THDemo.hs
src/GraphDB/: API.hs  CIO.hs  DIOVector.hs  Engine.hs  GenerateBoilerplate.hs  Graph.hs  IOQueue.hs  IOStableNameSet.hs  IOTable.hs  Macros.hs  Prelude.hs  SNMultiTable.hs  Server.hs  TH.hs
src/GraphDB/Engine/: Node.hs
src/GraphDB/GenerateBoilerplate/: MembersRegistry.hs  TagInstanceBuilder.hs
src/GraphDB/Graph/: Dispatcher.hs  DynamicNode.hs  Node.hs  Transaction.hs  TypedNode.hs  Types.hs
src/GraphDB/Graph/Transaction/: NodeRef.hs  NodeRefRegistry.hs
src/GraphDB/Macros/: BoilerplateBuilder.hs  GraphDBTagInstanceBuilder.hs  GraphTagInstanceBuilder.hs  NamesRegistry.hs  TagInstanceBuilder.hs
src/GraphDB/TH/: Q.hs  Type.hs
src/HTFTestSuite/: CatalogueDB.hs  GenerateBoilerplateTests.hs  GraphDBTests.hs  GraphTests.hs  MacrosTests.hs  Model.hs
src/HTFTestSuite/GenerateBoilerplate/: TransactionReificationTests.hs
src/HTFTestSuite/Macros/: TransactionReificationTests.hs
src/MainTestSuite/: GenerateBoilerplateTests.hs  GraphDBTests.hs  GraphTests.hs  Model.hs  THTests.hs
src/TPM/: GraphDB.hs
src/TPM/GraphDB/: API.hs  CIO.hs  DB.hs  DIOVector.hs  Dispatcher.hs  EdgesTable.hs  GenerateBoilerplate.hs  GetT.hs  Graph.hs  IOQueue.hs  Node.hs  Prelude.hs  SerializableWithContext.hs  Serialization.hs  Storage.hs  TH.hs  Transaction.hs
src/TPM/GraphDB/GenerateBoilerplate/: MembersRegistry.hs  TagInstanceBuilder.hs
src/TPM/GraphDB/Graph/: Dispatcher.hs  Node.hs  Transaction.hs
src/TPM/GraphDB/Graph/Transaction/: NodeRef.hs  NodeRefRegistry.hs
src/TPM/GraphDB/Node/: Deserialize.hs  EdgesTable.hs  Serialize.hs
src/TPM/GraphDB/TH/: AccumulateDecs.hs  MembersRegistry.hs  Q.hs  TagInstanceBuilder.hs  Type.hs
src/TPM/GraphDB/Transaction/: Event.hs  NodeRef.hs  NodeRefRegistry.hs  Tag.hs
src/demo/: Main.hs
src/graph-db-demo/: Demo.hs
src/graph-db-htf-test-suite/: Main.hs
src/graph-db-htf-test-suite/HTFTestSuite/: CatalogueDB.hs  GraphDBTests.hs  MacrosTests.hs
src/htf-test-suite/: Main.hs
src/htf-test-suite/HTFTestSuite/: A.hs  GraphDBTests.hs  ServerAndClientTests.hs  StorageTests.hs
src/htf-test-suite/HTFTestSuite/Macros/: TransactionReificationTests.hs
