name:
  graph-db
version:
  0.3.0
synopsis:
  A native Haskell graph database
description:
  Provides a mutable in-memory graph datastructure with complete ACID guarantees,
  a persistence layer, a server and a client.
license:
  MIT
license-file:
  LICENSE
homepage:
  https://github.com/nikita-volkov/graph-db 
bug-reports:
  https://github.com/nikita-volkov/graph-db/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2013, Nikita Volkov
category:
  Database, Graphs
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/graph-db.git


library
  hs-source-dirs:
    library
  other-modules:
    GraphDB.Server
    GraphDB.Nonpersistent
    GraphDB.Persistent
    GraphDB.Persistent.Log
    GraphDB.Client
    GraphDB.Action
    GraphDB.Model.Edge
    GraphDB.Model.Union
    GraphDB.Model.Macros
    GraphDB.Service.Protocol
    GraphDB.Graph
    GraphDB.Storage
    GraphDB.Storage.Rules
    GraphDB.Util.TH
    GraphDB.Util.TH.Q
    GraphDB.Util.TH.Type
    GraphDB.Util.TH.Parsers
    GraphDB.Util.FileSystem
    GraphDB.Util.DIOVector
    GraphDB.Util.IOQueue
    GraphDB.Util.Prelude
  exposed-modules:
    GraphDB
  build-depends:
    -- parsing:
    parsec,
    attoparsec,
    -- template-haskell:
    template-haskell,
    th-expand-syns,
    -- networking:
    remotion == 0.1.*,
    network == 2.4.*,
    network-simple == 0.3.*,
    pipes-network == 0.6.*,
    -- streaming:
    pipes >= 4.0 && < 4.2,
    pipes-bytestring == 2.0.*,
    pipes-cereal-plus == 0.3.*,
    -- file-system:
    directory == 1.2.*,
    filelock == 0.1.*,
    system-filepath == 0.4.*,
    system-fileio == 0.3.*,
    -- concurrency:
    async == 2.*,
    lifted-async == 0.1.*,
    stm,
    SafeSemaphore == 0.9.*,
    monad-stm,
    -- data:
    hashtables-plus == 0.1.*,
    hashable == 1.2.*,
    bytestring,
    text,
    containers,
    unordered-containers,
    vector,
    hashtables == 1.1.*,
    time,
    old-locale,
    -- control:
    errors >= 1.4.6 && < 1.5,
    free >= 4.6 && < 5,
    monad-control == 0.3.*,
    transformers-base == 0.4.*,
    transformers,
    mtl,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- 
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010


executable graph-db-demo
  hs-source-dirs:
    demo
  main-is:
    Main.hs
  ghc-options:
    -threaded 
    "-with-rtsopts=-N"
  build-depends:
    cereal-plus,
    old-locale,
    time,
    text,
    basic-prelude,
    graph-db,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010


test-suite internal-tests
  type:             
    exitcode-stdio-1.0
  hs-source-dirs:   
    internal-tests
    library
  main-is:          
    Main.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:
    -- testing:
    async,
    directory,
    system-fileio,
    old-locale,
    time,
    cereal-plus,
    quickcheck-instances,
    QuickCheck-GenT >= 0.1.3 && < 0.2,
    QuickCheck,
    HUnit,
    HTF == 0.11.*,
    -- parsing:
    parsec,
    attoparsec,
    -- template-haskell:
    template-haskell,
    th-expand-syns,
    -- networking:
    remotion == 0.1.*,
    network == 2.4.*,
    network-simple == 0.3.*,
    pipes-network == 0.6.*,
    -- streaming:
    pipes >= 4.0 && < 4.2,
    pipes-bytestring == 2.0.*,
    pipes-cereal-plus == 0.3.*,
    -- file-system:
    directory == 1.2.*,
    filelock == 0.1.*,
    system-filepath == 0.4.*,
    system-fileio == 0.3.*,
    -- concurrency:
    async == 2.*,
    lifted-async == 0.1.*,
    stm,
    SafeSemaphore == 0.9.*,
    monad-stm,
    -- data:
    string-conversions == 0.3.*,
    hashtables-plus == 0.1.*,
    hashable == 1.2.*,
    bytestring,
    text,
    containers,
    unordered-containers,
    vector,
    hashtables == 1.1.*,
    time,
    old-locale,
    -- control:
    errors >= 1.4.6 && < 1.5,
    free >= 4.6 && < 5,
    monad-control == 0.3.*,
    transformers-base == 0.4.*,
    transformers,
    mtl,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- 
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010


test-suite api-tests
  type:             
    exitcode-stdio-1.0
  hs-source-dirs:   
    api-tests
  main-is:          
    Main.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:
    -- testing:
    graph-db,
    old-locale,
    time,
    cereal-plus,
    quickcheck-instances,
    QuickCheck-GenT >= 0.1.3 && < 0.2,
    QuickCheck,
    HUnit,
    HTF == 0.11.*,
    -- concurrency:
    lifted-async,
    -- file-system:
    directory == 1.2.*,
    system-filepath == 0.4.*,
    system-fileio == 0.3.*,
    -- data:
    string-conversions == 0.3.*,
    vector,
    cereal-plus,
    hashable,
    containers,
    bytestring,
    text,
    time,
    old-locale,
    -- control:
    lens == 4.*,
    monad-control == 0.3.*,
    transformers-base == 0.4.*,
    transformers,
    mtl,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- 
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010


benchmark competition
  type:             
    exitcode-stdio-1.0
  hs-source-dirs:   
    benchmarks
  main-is:      
    Competition.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:
    graph-db,
    mwc-random == 0.13.*,
    lens == 4.*,
    -- acid-state:
    acid-state == 0.12.*,
    ixset == 1.0.*,
    safecopy == 0.8.*,
    -- postgres:
    postgresql-simple == 0.4.*,
    ex-pool == 0.1.*,
    -- benchmarking:
    criterion-plus == 0.1.*,
    -- concurrency:
    lifted-async,
    -- file-system:
    directory == 1.2.*,
    system-filepath == 0.4.*,
    system-fileio == 0.3.*,
    -- data:
    string-conversions == 0.3.*,
    cereal-plus,
    hashable,
    containers,
    bytestring,
    text,
    time,
    old-locale,
    -- control:
    lifted-base == 0.2.*,
    free >= 4.6 && < 5,
    monad-control == 0.3.*,
    transformers-base == 0.4.*,
    transformers,
    mtl,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- 
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010



benchmark nonpersistent
  type:             
    exitcode-stdio-1.0
  hs-source-dirs:   
    benchmarks
  main-is:      
    Nonpersistent.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  build-depends:
    graph-db,
    mwc-random == 0.13.*,
    lens == 4.*,
    -- benchmarking:
    criterion-plus == 0.1.*,
    -- concurrency:
    lifted-async,
    -- file-system:
    directory == 1.2.*,
    system-filepath == 0.4.*,
    system-fileio == 0.3.*,
    -- data:
    string-conversions == 0.3.*,
    cereal-plus,
    hashable,
    containers,
    bytestring,
    text,
    time,
    old-locale,
    -- control:
    lifted-base == 0.2.*,
    free >= 4.6 && < 5,
    monad-control == 0.3.*,
    transformers-base == 0.4.*,
    transformers,
    mtl,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- 
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010

