name:
  tpm-graph-db
version:
  0.1.0
author:
  Nikita Volkov
maintainer:
  nikita.y.volkov@mail.ru
build-type:
  Simple
cabal-version:
  >=1.10



library
  hs-source-dirs:
    src
  exposed-modules:
    TPM.GraphDB
  other-modules:
    TPM.GraphDB.API
    TPM.GraphDB.Graph
    TPM.GraphDB.Prelude
    TPM.GraphDB.Graph.Dispatcher
    TPM.GraphDB.Graph.Node
    TPM.GraphDB.Graph.Transaction
    TPM.GraphDB.Graph.Transaction.NodeRef
    TPM.GraphDB.Graph.Transaction.NodeRefRegistry
    TPM.GraphDB.DIOVector
    TPM.GraphDB.IOQueue
  build-depends:
    pipes == 4.0.*,
    errors,
    acid-io == 0.1.*,
    SafeSemaphore == 0.9.*,
    safecopy >= 0.8.3,
    cereal,
    system-filepath == 0.4.*,
    vector,
    hashtables == 1.1.*,
    hashable == 1.2.*,
    text,
    bytestring,
    stm,
    transformers,
    mtl,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    DeriveGeneric
    ImpredicativeTypes
    BangPatterns
    PatternGuards
    GADTs
    StandaloneDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    FlexibleInstances
    TypeFamilies
    TypeOperators
    FlexibleContexts
    NoImplicitPrelude
    EmptyDataDecls
    DataKinds
    NoMonomorphismRestriction
    RankNTypes
    ConstraintKinds
    DefaultSignatures
    TupleSections
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    DeriveDataTypeable
    GeneralizedNewtypeDeriving
    RecordWildCards
    MultiWayIf
    LiberalTypeSynonyms
  default-language:
    Haskell2010



executable graph-db-demo
  hs-source-dirs:
    src
  main-is:
    Demo.hs
  ghc-options:
    -threaded 
    "-with-rtsopts=-N"
  build-depends:
    errors,
    acid-io == 0.1.*,
    SafeSemaphore == 0.9.*,
    safecopy >= 0.8.3,
    cereal,
    system-filepath == 0.4.*,
    vector,
    hashtables == 1.1.*,
    hashable == 1.2.*,
    text,
    bytestring,
    stm,
    transformers,
    mtl,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    DeriveGeneric
    ImpredicativeTypes
    BangPatterns
    PatternGuards
    GADTs
    StandaloneDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    FlexibleInstances
    TypeFamilies
    TypeOperators
    FlexibleContexts
    NoImplicitPrelude
    EmptyDataDecls
    DataKinds
    NoMonomorphismRestriction
    RankNTypes
    ConstraintKinds
    DefaultSignatures
    TupleSections
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    DeriveDataTypeable
    GeneralizedNewtypeDeriving
    RecordWildCards
    MultiWayIf
    LiberalTypeSynonyms
  default-language:
    Haskell2010


test-suite graph-db-main-test-suite
  type:             
    exitcode-stdio-1.0
  hs-source-dirs:   
    src
  main-is:          
    MainTestSuite.hs
  build-depends:
    pipes,
    pipes-bytestring,
    errors,
    acid-io == 0.1.*,
    SafeSemaphore == 0.9.*,
    safecopy >= 0.8.3,
    cereal,
    system-filepath == 0.4.*,
    vector,
    hashtables == 1.1.*,
    hashable == 1.2.*,
    text,
    bytestring,
    stm,
    transformers,
    mtl,
    base >= 4.5 && < 5,

    QuickCheck,
    HUnit,
    HTF == 0.11.*
  default-extensions:
    Arrows
    DeriveGeneric
    ImpredicativeTypes
    BangPatterns
    PatternGuards
    GADTs
    StandaloneDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    FlexibleInstances
    TypeFamilies
    TypeOperators
    FlexibleContexts
    NoImplicitPrelude
    EmptyDataDecls
    DataKinds
    NoMonomorphismRestriction
    RankNTypes
    ConstraintKinds
    DefaultSignatures
    TupleSections
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    DeriveDataTypeable
    GeneralizedNewtypeDeriving
    RecordWildCards
    MultiWayIf
  default-language:
    Haskell2010


